Revision history for Capture-Tiny

{{$NEXT}}

  Added:

  - New functions capture_stdout, capture_stderr, tee_stdout, tee_stderr
    [rt.cpan.org #60515]

  Fixed:

  - Tied filehandles based on Tie::StdHandle can now use the ":utf8"
    layer; removed remaining TODO tests; adds Scalar::Util as a dependency

  Changed:

  - When Time::HiRes::usleep is available, tee operations will
    sleep during the busy-loop waiting for tee processes to be ready
    [rt.cpan.org #67858]

0.11      2011-05-19 23:34:23 America/New_York

  Fixed:

  - Tests will not use Test::Differences version 0.60 or greater

0.10      2011-02-07 07:01:44 EST5EDT

  Fixed:

  - Setting PERL_CAPTURE_TINY_TIMEOUT to 0 will disable timeouts

0.09      2011-01-27 23:52:16 EST5EDT

  Added:

  - Added support for $ENV{PERL_CAPTURE_TINY_TIMEOUT} to control
    the timeout period under 'tee'; tests set not to timeout to
    avoid false FAIL reports on overloaded virtual machine smokers

  Fixed:

  - $@ set within a captured block is no longer lost when the capture
    is completed; likewise, the initial value of $@ is not lost
    during capture (when no subsequent error occurs) (RT #65139)

0.08 Sun Jun 20 19:13:19 EDT 2010

  Fixed:

  - Exceptions in captured coderef are caught, then handles are restored
    before the exception is rethrown (RT #58208)

0.07 Sun Jan 24 00:18:45 EST 2010

  Fixed:

  - Changed test for $? preservation to be more portable

  - Dropped support for Perl 5.8.0 specifically due to excessive bugs.
    Tests will bail out. (5.6.X is still supported)

0.06 Thu May  7 06:54:53 EDT 2009

  Fixed:

    - On Win32, subprocesses now close themselves on EOF instead of being
      killed with a signal

0.05_51 Tue Apr 21 07:00:38 EDT 2009

  Added:

    - Support for wide characters on handles opened to utf8

    - Support for STDOUT, STDERR or STDIN opened to in-memory
      files (open to scalar reference) or tied, albeit with some limitations

  Testing:
